--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,42 @@
-<!--index.wxml-->
-<view class="container">
-  <view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+<view class="pages">
+	<view class="header">
+		<image class="header-bg" src="../../images/index_bg_top.png" mode="widthFix"></image>
+		<view class="header-content">
+			<view class="logined" wx:if="{{isLogined}}">
+				<text class="line-first">资产总额</text>
+ 				<text class="line-second">{{assetInfo.total}}</text>
+ 				<text class="line-third">（待收收益：{{assetInfo.receivedIncome}}）</text>
+			</view>
+			<view class="no-logined" wx:else>
+				<text>您还没有登录哦！</text>
+				<view class="login-btn" bindtap="goLogin">登录/注册</view>
+			</view>
+		</view>		
+	</view>
+ 	<view class="list">
+ 		<view class="list-item">
+ 			<image class="item-icon" src="../../images/index_icon_record.png" mode="aspectFit"></image>
+ 			<view class="item-text">
+ 				<text class="line-first">查看投资记录</text>
+ 				<text class="line-second">包含P2P投资和定期投资</text>
+ 			</view>
+ 			<image class="item-arrow" src="../../images/index_icon_right.png" mode="aspectFit"></image>
+ 		</view>
+ 		<view class="list-item">
+ 			<image class="item-icon" src="../../images/index_icon_presentation.png" mode="aspectFit"></image>
+ 			<view class="item-text">
+ 				<text class="line-first">了解团贷网</text>
+ 				<text class="line-second">安全可靠的投资平台</text>
+ 			</view>
+ 			<image class="item-arrow" src="../../images/index_icon_right.png" mode="aspectFit"></image>
+ 		</view>
+ 		<view class="list-item">
+ 			<image class="item-icon" src="../../images/index_icon_wechat.png" mode="aspectFit"></image>
+ 			<view class="item-text">
+ 				<text class="line-first">关注微信号</text>
+ 				<text class="line-second">享受更多投资服务</text>
+ 			</view>
+ 			<image class="item-arrow" src="../../images/index_icon_right.png" mode="aspectFit"></image>
+ 		</view>
+ 	</view>
 </view>
