--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,114 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.header {
+	position: relative;
+}
+.header .header-bg {
+	width: 100%;
+	display: block;
+	z-index: 1;
+}
+.header .header-content {
+	position: absolute;
+	z-index: 99;
+	top: 0;
+	width: 100%;
+
+}
+.header-content .no-logined {
+	padding-top: 74rpx;
+	text-align: center;
+	/*display: none;*/
+}
+ .header-content .no-logined text {
+	font-size: 60rpx;
+	color: #fff;
+	margin: auto;
+	text-align: center;
+	margin-bottom: 52rpx;
+	display: block;
+	text-shadow: 0rpx 8rpx 8rpx #ffac11;
+}
+.header-content .no-logined .login-btn {
+	font-size: 30rpx;
+	width: 228rpx;
+	height: 60rpx;
+	line-height: 60rpx;
+	text-align: center;
+	margin: auto;
+	color: #fff;
+	border: 1rpx solid #fff;
+	border-radius: 10rpx;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.header-content .logined {
+	padding-top: 50rpx;
+	text-align: center;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.header-content .logined .line-first {
+	font-size: 30rpx;
+	color: #fff;
+	margin: auto;
+	text-align: center;
+	margin-bottom: 30rpx;
+	display: block;
+}
+.header-content .logined .line-second {
+	font-size: 60rpx;
+	color: #fff;
+	margin: auto;
+	text-align: center;
+	margin-bottom: 52rpx;
+	display: block;
+	text-shadow: 0rpx 8rpx 8rpx #ffac11;
+}
+.header-content .logined .line-third {
+	font-size: 30rpx;
+	color: #fff;
+	margin: auto;
+	text-align: center;
+	display: block;
+	opacity: 0.6;
 }
 
-.usermotto {
-  margin-top: 200px;
+.list {
+	padding-left: 40rpx;
+	position: relative;
+}
+.list .list-item {
+	border-bottom: 1px solid #e6e6e6;
+	font-size: 0;
+	padding: 50rpx 0;
+	position: relative;
+}
+.list .list-item .item-icon {
+	width: 90rpx;
+	height: 90rpx;
+	border-radius: 45rpx;
+	margin-right: 30rpx;
+	vertical-align: middle;
+}
+.list .list-item .item-text {
+	display: inline-block;
+	margin-top: 10rpx;
+	vertical-align: middle;
+}
+.list .list-item .item-text .line-first {
+	display: block;
+	color: #333;
+	font-size: 34rpx;
+	margin-bottom: 20rpx;
+}
+.list .list-item .item-text .line-second {
+	color: #ccc;
+	font-size: 24rpx;
+}
+.list .list-item .item-arrow {
+	width: 15rpx;
+	height: 28rpx;
+	vertical-align: middle;
+	position: absolute;
+	right: 40rpx;
+	top:50%;
+	margin-top: -14rpx;
 }
