--- a/pages/user/login.wxml
+++ b/pages/user/login.wxml
@@ -1,16 +1,16 @@
-<view class="pages">
+<view class="page">
   <view class="login-form">
 	  <view class="username-wrapper">
-	  	<image class="username-icon" src="../../images/login_icon_phone.png" mode="aspectFit"></image>
+	  	<image class="username-icon" src="../../images/icon_phone.png" mode="aspectFit"></image>
 	  	<input type="text" bindinput="onUserNameInput" placeholder="请输入手机号码/用户名" placeholder-style="color:#ccc" maxlength="25" focus="{{true}}"/>
 	  </view>
 
 	  <view class="pwd-wrapper">
-	  	<image class="pwd-icon" src="../../images/login_icon_password.png" mode="aspectFit"></image>
+	  	<image class="pwd-icon" src="../../images/icon_password_open.png" mode="aspectFit"></image>
 	  	<input type="text" password="{{!isShowPwd}}" bindinput="onPwdInput" placeholder="请输入登录密码" placeholder-style="color:#ccc" maxlength="16"/>
 
-	  	<image class="eye-icon eye-icon-on" wx:if="{{isShowPwd}}" data-type="on" bindtap="onToggleShowPwd" src="../../images/login_icon_visible.png" mode="aspectFit"></image>
-	  	<image class="eye-icon eye-icon-off" wx:else data-type="off" bindtap="onToggleShowPwd" src="../../images/login_icon_invisible.png" mode="aspectFit"></image>
+	  	<image class="eye-icon eye-icon-on" wx:if="{{isShowPwd}}" data-type="on" bindtap="onToggleShowPwd" src="../../images/icon_visible.png" mode="aspectFit"></image>
+	  	<image class="eye-icon eye-icon-off" wx:else data-type="off" bindtap="onToggleShowPwd" src="../../images/icon_invisible.png" mode="aspectFit"></image>
 	  </view>
  	</view>
 
