--- a/pages/user/forgetpwd.wxml
+++ b/pages/user/forgetpwd.wxml
@@ -1,4 +1,4 @@
-<view class="pages">
+<view class="page">
 	<view class="forgetpwd-form">
 		<view class="phone-wrapper">
 			<text class="label">手机号码</text>
