--- a/pages/user/resetpwd.wxml
+++ b/pages/user/resetpwd.wxml
@@ -1,4 +1,4 @@
-<view class="pages">
+<view class="page">
 	<view class="resetpwd-form">
 		<view class="pwd-wrapper">
 			<text class="label">新密码</text>
@@ -9,5 +9,5 @@
 			<input type="text" bindinput="onRePwdInput" maxlength="16" placeholder="请再次输入新密码" placeholder-style="color:#ccc" password="{{true}}"/>
 		</view>
 	</view>
-	<button class="submit-btn" bindtap="onSubmit" loading="{{isRequesting}}"> 提交更新</button>
+	<button class="submit-btn" bindtap="onSubmit" loading="{{isRequesting}}">{{hasSpace}}提交更新</button>
 </view>
