--- a/pages/user/registe.wxml
+++ b/pages/user/registe.wxml
@@ -38,4 +38,5 @@
 	<button class="registe-btn" bindtap="goRegister">注册</button>
 
 	<view class="agreement-wrapper">注册即表示您已同意<text bindtap="goAgreement">《团贷网服务协议》</text></view>
+	<view class="footer-wrapper">已有账号？<text bindtap="goLogin">马上登录</text></view>
 </view>
