--- a/pages/user/registe.wxml
+++ b/pages/user/registe.wxml
@@ -35,7 +35,7 @@
 	  	</view>
 		</view>
 		
-	<button class="registe-btn" bindtap="goRegister">注册</button>
+	<button class="registe-btn" bindtap="goRegister" loading="{{isRequesting}}">{{isRequesting? " ": ""}}注册</button>
 
 	<view class="agreement-wrapper">注册即表示您已同意<text bindtap="goAgreement">《团贷网服务协议》</text></view>
 	<view class="footer-wrapper">已有账号？<text bindtap="goLogin">马上登录</text></view>
