--- a/app.wxss
+++ b/app.wxss
@@ -2,7 +2,7 @@ page {
 	height: 100%;
 }
 .page {
-  	font-family: PingFang SC Regular;
+  	font-family: PingFang SC;
  	box-sizing:border-box;
 	-webkit-box-sizing:border-box;
 } 
