--- a/pages/about/partners.wxml
+++ b/pages/about/partners.wxml
@@ -1,8 +1,10 @@
 <view class="page">
 	<view class="partners">
 		<view class="partner" wx:for="{{partners}}">
-			<image src="{{item.img}}" mode="aspectFit"></image>
-			<view class="name">{{item.name}}</view>
+			<view class="partnerImgBox">
+				<image src="{{item.pic}}" mode="widthFix"></image>
+			</view>
+			<view class="name">{{item.title}}</view>
 		</view>
 	</view>
 </view>
