--- a/pages/user/registe.wxss
+++ b/pages/user/registe.wxss
@@ -13,6 +13,7 @@
 	width: 100%;
 	height: 80rpx;
 	padding-left: 96rpx;
+	padding-right: 82rpx;
 	box-sizing:border-box;
 	-webkit-box-sizing:border-box;
 	margin-top: 36rpx;
@@ -52,12 +53,22 @@
 	-webkit-transform: translateY(-50%); 
 	transform: translateY(-50%);
 }
+.registe-form .toggle-pwd {
+	position: absolute;
+	right: 30rpx;
+	width: 50rpx;
+	height: 50rpx;
+	top: 50%;
+	margin-top: -25rpx;	
+	z-index: 99;
+}
 .registe-form .eye-icon {
 	width: 30rpx;
 	height: 30rpx;
 	position: absolute;
-	right: 30rpx;
 	top: 50%;
+	left: 50%;
+	margin-left: -15rpx;
 	margin-top: -15rpx;	
 	z-index: 99;
 }
