--- a/pages/user/forgetpwd.wxml
+++ b/pages/user/forgetpwd.wxml
@@ -1,4 +1,6 @@
+<import src="../../utils/toolTip/toolTip.wxml"/>
 <view class="page">
+	<template is="toolTip" data="{{_toolTip_}}"/>
 	<view class="forgetpwd-form">
 		<view class="phone-wrapper">
 			<text class="label">手机号码</text>
@@ -6,10 +8,10 @@
 		</view>
 		<view class="verification-wrapper">
 			<text class="label">验证码</text>
-			<input type="number" bindinput="onVerificationInput" maxlength="6" placeholder="请输入验证码" placeholder-style="color:#ccc" />
+			<input type="number" bindinput="onVerifyInput" maxlength="6" placeholder="请输入验证码" placeholder-style="color:#ccc" />
 			<view class="right">
 				<text class="left-time" wx:if="{{leftTime >= 0}}">{{leftTime}}s</text>
-				<text class="send-btn" bindtap="onSendVerificateCode" wx:else>发送验证码</text>
+				<text class="send-btn" bindtap="onSendVerifyCode" wx:else>发送验证码</text>
 			</view>
 		</view>
 	</view>
