--- a/pages/user/registe.wxml
+++ b/pages/user/registe.wxml
@@ -1,5 +1,7 @@
+<import src="../../utils/toolTip/toolTip.wxml"/>
 <view class="page">
-  <view class="registe-form">
+	<template is="toolTip" data="{{_toolTip_}}"/>
+  	<view class="registe-form">
 	  <view class="phone-wrapper">
 	  	<image class="phone-icon" src="../../images/icon_phone.png" mode="aspectFit"></image>
 	  	<input type="number" bindinput="onPhoneInput" placeholder="请输入手机号码" placeholder-style="color:#ccc" maxlength="11"/>
@@ -17,10 +19,10 @@
 
 	  <view class="verification-wrapper">
 			<image class="verification-icon" src="../../images/icon_msg.png" mode="aspectFit"></image>
-			<input type="number" bindinput="onVerificationInput" maxlength="6" placeholder="请输入验证码" placeholder-style="color:#ccc" />
+			<input type="number" bindinput="onVerifyInput" maxlength="6" placeholder="请输入验证码" placeholder-style="color:#ccc" />
 			<view class="right">
 				<text class="left-time" wx:if="{{leftTime >= 0}}">{{leftTime}}s</text>
-				<text class="send-btn" bindtap="onSendVerificateCode" wx:else>发送验证码</text>
+				<text class="send-btn" bindtap="onSendVerifyCode" wx:else>发送验证码</text>
 			</view>
 		</view>
  	</view>
@@ -37,7 +39,7 @@
 	  	</view>
 		</view>
 		
-	<button class="registe-btn" bindtap="goRegister" loading="{{isRequesting}}">{{isRequesting? " ": ""}}注册</button>
+	<button class="registe-btn" bindtap="onRegister" loading="{{isRequesting}}">{{isRequesting? " ": ""}}注册</button>
 
 	<view class="agreement-wrapper">注册即表示您已同意<text bindtap="goAgreement">《团贷网服务协议》</text></view>
 	<view class="footer-wrapper">已有账号？<text bindtap="goLogin">马上登录</text></view>
