--- a/pages/user/resetpwd.wxml
+++ b/pages/user/resetpwd.wxml
@@ -2,6 +2,18 @@
 <view class="page">
 	<template is="toolTip" data="{{_toolTip_}}"/>
 	<view class="resetpwd-form">
+		<view class="phone-wrapper">
+			<text class="label">手机号码</text>
+			<input type="number" bindinput="onPhoneInput" maxlength="11" placeholder="请输入手机号码" placeholder-style="color:#ccc" />
+		</view>
+		<view class="verification-wrapper">
+			<text class="label">验证码</text>
+			<input type="number" bindinput="onVerifyInput" maxlength="6" placeholder="请输入验证码" placeholder-style="color:#ccc" />
+			<view class="right">
+				<text class="left-time" wx:if="{{leftTime >= 0}}">{{leftTime}}s</text>
+				<text class="send-btn" bindtap="onSendVerifyCode" wx:else>发送验证码</text>
+			</view>
+		</view>
 		<view class="pwd-wrapper">
 			<text class="label">新密码</text>
 			<input type="text" bindinput="onPwdInput" maxlength="16" placeholder="字母+数字（6-16位）" placeholder-style="color:#ccc" password="{{true}}"/>
